--- a/jaxDemo/neural_network_with_tfds_data.ipynb
+++ b/jaxDemo/neural_network_with_tfds_data.ipynb
@@ -265,7 +265,12 @@
    "pygments_lexer": "ipython3",
    "version": "3.11.0"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "03c6c4493b61693b8c237cfb67269810eda92c107a38587538648c43d13ad6a6"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
