--- a/jaxDemo/vmapped_log_probs.ipynb
+++ b/jaxDemo/vmapped_log_probs.ipynb
@@ -566,7 +566,7 @@
       "formats": "ipynb,md:myst"
     },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "JAX",
       "language": "python",
       "name": "python3"
     },
@@ -581,6 +581,11 @@
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
       "version": "3.11.0"
+    },
+    "vscode": {
+      "interpreter": {
+        "hash": "03c6c4493b61693b8c237cfb67269810eda92c107a38587538648c43d13ad6a6"
+      }
     }
   },
   "nbformat": 4,
